--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,19 @@
 	<title>Cookies Cart - demo</title>
 </head>
 <body>
+	<section class="main-content">
+		<ul class="items">
+			<li>
+				Demo Item #1
+				<button class="cookiescart-add" data-id="1" data-price="2.30">Buy ($ 2.30)</button>
+			</li>
+			<li>
+				Demo Item #2
+				<button class="cookiescart-add" data-id="2" data-price="1.80">Buy option 1 ($ 1.80)</button>
+				<button class="cookiescart-add" data-id="3" data-price="2.80">Buy option 2 ($ 2.80)</button>
+			</li>
+		</ul>
+	</section>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
