Update quantity and totals upon page load or cart change

--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,13 @@
 	<title>Cookies Cart - demo</title>
 </head>
 <body>
+	<header class="main-header">
+		<section class="shopping-cart">
+			<span class="cookiescart-uniqueitems">0</span> items in your shopping cart.
+			Total: $ <span class="cookiescart-total">0.00</span>.
+		</section>
+	</header>
+
 	<section class="main-content">
 		<ul class="items">
 			<li>
