Add support for user input quantity

--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,11 @@
 				<button class="cookiescart-add" data-id="2" data-price="1.80">Buy option 1 ($ 1.80)</button>
 				<button class="cookiescart-add" data-id="3" data-price="2.80">Buy option 2 ($ 2.80)</button>
 			</li>
+			<li>
+				Demo Item #3
+				<input class="cookiescart-quantity" data-id="4" type="number" value="1">
+				<button class="cookiescart-add" data-id="4" data-price="0.50">Buy ($ 0.50 each)</button>
+			</li>
 		</ul>
 	</section>
 
