--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,8 @@
 <body>
 	<header class="main-header">
 		<section class="shopping-cart">
-			<span class="cookiescart-uniqueitems">0</span> items in your shopping cart.
+			<span class="cookiescart-uniqueitems">0</span> items in your shopping cart:
+			<ul class="cookiescart-items"></ul>
 			Total: $ <span class="cookiescart-total">0.00</span>.
 		</section>
 	</header>
@@ -30,6 +31,22 @@
 			</li>
 		</ul>
 	</section>
+
+	<!-- Shopping cart items representation -->
+	<div style="display:none">
+		<li class="cookiescart-item" data-id="1">
+			Demo Item #1
+		</li>
+		<li class="cookiescart-item" data-id="2">
+			Demo Item #2 (option 1)
+		</li>
+		<li class="cookiescart-item" data-id="3">
+			Demo Item #2 (option 2)
+		</li>
+		<li class="cookiescart-item" data-id="4">
+			Demo Item #3
+		</li>
+	</table>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
