--- a/demo.html
+++ b/demo.html
@@ -35,16 +35,24 @@
 	<!-- Shopping cart items representation -->
 	<div style="display:none">
 		<li class="cookiescart-item" data-id="1">
-			Demo Item #1
+			<strong>Demo Item #1</strong>
+			- <span class="cookiescart-item-amount">0</span> in cart
+			- total: R$ <span class="cookiescart-item-total">0.00</span>
 		</li>
 		<li class="cookiescart-item" data-id="2">
-			Demo Item #2 (option 1)
+			<strong>Demo Item #2 (option 1)</strong>
+			- <span class="cookiescart-item-amount">0</span> in cart
+			- total: R$ <span class="cookiescart-item-total">0.00</span>
 		</li>
 		<li class="cookiescart-item" data-id="3">
-			Demo Item #2 (option 2)
+			<strong>Demo Item #2 (option 2)</strong>
+			- <span class="cookiescart-item-amount">0</span> in cart
+			- total: R$ <span class="cookiescart-item-total">0.00</span>
 		</li>
 		<li class="cookiescart-item" data-id="4">
-			Demo Item #3
+			<strong>Demo Item #3</strong>
+			- <span class="cookiescart-item-amount">0</span> in cart
+			- total: R$ <span class="cookiescart-item-total">0.00</span>
 		</li>
 	</table>
 
