--- a/demo.html
+++ b/demo.html
@@ -38,21 +38,25 @@
 			<strong>Demo Item #1</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-remove-all" data-id="1">Remove all</button>
 		</li>
 		<li class="cookiescart-item" data-id="2">
 			<strong>Demo Item #2 (option 1)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-remove-all" data-id="2">Remove all</button>
 		</li>
 		<li class="cookiescart-item" data-id="3">
 			<strong>Demo Item #2 (option 2)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-remove-all" data-id="3">Remove all</button>
 		</li>
 		<li class="cookiescart-item" data-id="4">
 			<strong>Demo Item #3</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-remove-all" data-id="4">Remove all</button>
 		</li>
 	</table>
 
