Move `data-price` to the item's repr element

--- a/demo.html
+++ b/demo.html
@@ -17,45 +17,45 @@
 		<ul class="items">
 			<li>
 				Demo Item #1
-				<button class="cookiescart-add" data-id="1" data-price="2.30">Buy ($ 2.30)</button>
+				<button class="cookiescart-add" data-id="1">Buy ($ 2.30)</button>
 			</li>
 			<li>
 				Demo Item #2
-				<button class="cookiescart-add" data-id="2" data-price="1.80">Buy option 1 ($ 1.80)</button>
-				<button class="cookiescart-add" data-id="3" data-price="2.80">Buy option 2 ($ 2.80)</button>
+				<button class="cookiescart-add" data-id="2">Buy option 1 ($ 1.80)</button>
+				<button class="cookiescart-add" data-id="3">Buy option 2 ($ 2.80)</button>
 			</li>
 			<li>
 				Demo Item #3
 				<input class="cookiescart-quantity" data-id="4" type="number" value="1">
-				<button class="cookiescart-add" data-id="4" data-price="0.50">Buy ($ 0.50 each)</button>
+				<button class="cookiescart-add" data-id="4">Buy ($ 0.50 each)</button>
 			</li>
 		</ul>
 	</section>
 
 	<!-- Shopping cart items representation -->
 	<div style="display:none">
-		<li class="cookiescart-item" data-id="1">
+		<li class="cookiescart-item" data-id="1" data-price="2.30">
 			<strong>Demo Item #1</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
 			<button class="cookiescart-remove" data-id="1">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="1">Remove all</button>
 		</li>
-		<li class="cookiescart-item" data-id="2">
+		<li class="cookiescart-item" data-id="2" data-price="1.80">
 			<strong>Demo Item #2 (option 1)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
 			<button class="cookiescart-remove" data-id="2">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="2">Remove all</button>
 		</li>
-		<li class="cookiescart-item" data-id="3">
+		<li class="cookiescart-item" data-id="3" data-price="2.80">
 			<strong>Demo Item #2 (option 2)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
 			<button class="cookiescart-remove" data-id="3">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="3">Remove all</button>
 		</li>
-		<li class="cookiescart-item" data-id="4">
+		<li class="cookiescart-item" data-id="4" data-price="0.50">
 			<strong>Demo Item #3</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
