Include an "add" button example to the item repr

--- a/demo.html
+++ b/demo.html
@@ -38,6 +38,7 @@
 			<strong>Demo Item #1</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-add" data-id="1">Add one</button>
 			<button class="cookiescart-remove" data-id="1">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="1">Remove all</button>
 		</li>
@@ -45,6 +46,7 @@
 			<strong>Demo Item #2 (option 1)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-add" data-id="2">Add one</button>
 			<button class="cookiescart-remove" data-id="2">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="2">Remove all</button>
 		</li>
@@ -52,6 +54,7 @@
 			<strong>Demo Item #2 (option 2)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-add" data-id="3">Add one</button>
 			<button class="cookiescart-remove" data-id="3">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="3">Remove all</button>
 		</li>
@@ -59,6 +62,7 @@
 			<strong>Demo Item #3</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
+			<button class="cookiescart-add" data-id="4">Add one</button>
 			<button class="cookiescart-remove" data-id="4">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="4">Remove all</button>
 		</li>
