Store the item name into the cookie jar

--- a/demo.html
+++ b/demo.html
@@ -34,7 +34,7 @@
 
 	<!-- Shopping cart items representation -->
 	<div style="display:none">
-		<li class="cookiescart-item" data-id="1" data-price="2.30">
+		<li class="cookiescart-item" data-id="1" data-price="2.30" data-name="Demo Item #1">
 			<strong>Demo Item #1</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
@@ -42,7 +42,7 @@
 			<button class="cookiescart-remove" data-id="1">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="1">Remove all</button>
 		</li>
-		<li class="cookiescart-item" data-id="2" data-price="1.80">
+		<li class="cookiescart-item" data-id="2" data-price="1.80" data-name="Demo Item #2 (option 1)">
 			<strong>Demo Item #2 (option 1)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
@@ -50,7 +50,7 @@
 			<button class="cookiescart-remove" data-id="2">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="2">Remove all</button>
 		</li>
-		<li class="cookiescart-item" data-id="3" data-price="2.80">
+		<li class="cookiescart-item" data-id="3" data-price="2.80" data-name="Demo Item #2 (option 2)">
 			<strong>Demo Item #2 (option 2)</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
@@ -58,7 +58,7 @@
 			<button class="cookiescart-remove" data-id="3">Remove one</button>
 			<button class="cookiescart-remove-all" data-id="3">Remove all</button>
 		</li>
-		<li class="cookiescart-item" data-id="4" data-price="0.50">
+		<li class="cookiescart-item" data-id="4" data-price="0.50" data-name="Demo Item #3">
 			<strong>Demo Item #3</strong>
 			- <span class="cookiescart-item-amount">0</span> in cart
 			- total: R$ <span class="cookiescart-item-total">0.00</span>
