Store and render number of total items in the cart

--- a/demo.html
+++ b/demo.html
@@ -7,9 +7,10 @@
 <body>
 	<header class="main-header">
 		<section class="shopping-cart">
-			<span class="cookiescart-uniqueitems">0</span> items in your shopping cart:
+			<span class="cookiescart-uniqueitems">0</span> unique items in your shopping cart:
 			<ul class="cookiescart-items"></ul>
-			Total: $ <span class="cookiescart-total">0.00</span>.
+			Total: $ <span class="cookiescart-total">0.00</span>
+			in <span class="cookiescart-totalitems">0</span> items.
 		</section>
 	</header>
 
